--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,39 @@
 body {
-  background: url(../images/keagan-henman-387584-unsplash.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+
 }
 
 p {
   margin: 0;
 }
 
-
+/*
 .my-container {
-  height: 95vh;
-  /*border: 5px solid green;*/
+  height: 100vh;
+  border: 5px solid green;
   display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
+  justify-content: center;
+  padding: 0;
+}*/
+
+img {
+  height: 60%;
+}
+
+.head {
+  height: 35vh;
+  color: gold;
+  font-weight: bold;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .my-row {
   /*border: 5px dashed red;*/
-  width: 100%;
-  display: flex;
-  align-items: center;
   justify-content: center;
+  height: 100vh;
+  margin: 0;
 }
 
 .mycol {
@@ -32,16 +41,19 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
+  min-width: calc(100vw/8);
+  padding: 0;
 }
 
 .key {
-  border: 3px solid yellow;
-  min-height: 50px;
-  min-width: 50px;
+  border: 1px solid black;
+  min-height: 100%;
+  min-width: -webkit-fill-available;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: white;
+  box-shadow: inset -2px 10px 15px 0px #6c757d;
 }
 
 footer {
