--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+  background-color: beige
 
 }
 
@@ -12,7 +13,7 @@ img {
 }
 
 .head {
-  height: 35vh;
+  height: 30vh;
   color: gold;
   font-weight: bold;
   background-color: black;
@@ -24,7 +25,7 @@ img {
 .my-row {
   /*border: 5px dashed red;*/
   justify-content: center;
-  height: 65vh;
+  height: 60vh;
   margin: 0;
 }
 
@@ -33,7 +34,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: calc(100vw/8);
+  min-width: calc(100%/8);
   padding: 0;
 }
 
@@ -46,6 +47,12 @@ img {
   justify-content: center;
   background-color: white;
   box-shadow: inset -2px 10px 15px 0px #6c757d;
+  text-align: center;
+  transition: all 0.8s;
+}
+
+.key-playing {
+  background-color: gold;
 }
 
 footer {
